--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorBackground">
 
     <TextView
         android:id="@+id/no_track_text"
@@ -47,6 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:textColor="@color/colorTitles"
             android:textSize="22sp"
             app:layout_constraintBottom_toTopOf="@id/album_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:textColor="@color/colorSubtitles"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/artist_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,6 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:textColor="@color/colorTitles"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@id/position_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -83,6 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:textColor="@color/colorTitles"
             android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@id/player_slider"
             app:layout_constraintEnd_toStartOf="@id/duration_text"
@@ -97,6 +102,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:textColor="@color/colorTitles"
             android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@id/player_slider"
             app:layout_constraintEnd_toEndOf="parent"
@@ -125,6 +131,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/ic_skip_previous_24px"
+            app:iconTint="@color/colorTint"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -134,6 +141,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/ic_play_arrow_24px"
+            app:iconTint="@color/colorTint"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/next_button"
             app:layout_constraintStart_toEndOf="@id/prev_button" />
@@ -145,6 +153,7 @@
             android:layout_height="wrap_content"
             android:visibility="gone"
             app:icon="@drawable/ic_pause_24px"
+            app:iconTint="@color/colorTint"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/next_button"
             app:layout_constraintStart_toEndOf="@id/prev_button" />
@@ -155,6 +164,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/ic_skip_next_24px"
+            app:iconTint="@color/colorTint"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
