--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -86,6 +86,7 @@
             style="@style/PlaybackText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingBottom="2dp"
             android:textAlignment="center"
             android:textColor="@color/colorTitles"
             android:textSize="14sp"
@@ -101,6 +102,7 @@
             style="@style/PlaybackText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingBottom="2dp"
             android:textAlignment="center"
             android:textColor="@color/colorTitles"
             android:textSize="14sp"
