--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,6 +13,11 @@
         android:title="@string/title_player" />
 
     <item
+        android:id="@+id/nav_playlists"
+        android:icon="@drawable/ic_list_black_24dp"
+        android:title="@string/title_playlists" />
+
+    <item
         android:id="@+id/nav_settings"
         android:icon="@drawable/ic_settings_black_24dp"
         android:title="@string/title_settings" />
