--- a/app/src/main/res/navigation/player.xml
+++ b/app/src/main/res/navigation/player.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/player_home"
-        android:name="org.musicpimp.ui.player.PlayerFragment"
+        android:name="org.musicpimp.ui.player.TabbedPlayerFragment"
         android:label="@string/title_player"
         tools:layout="@layout/fragment_player">
         <action
