--- a/app/src/main/res/menu/top_item_menu.xml
+++ b/app/src/main/res/menu/top_item_menu.xml
@@ -4,4 +4,8 @@
         android:id="@+id/top_add_item"
         android:icon="@drawable/ic_playlist_add_foreground"
         android:title="@string/add_to_playlist" />
+    <item
+        android:id="@+id/start_here_item"
+        android:icon="@drawable/ic_playlist_add_foreground"
+        android:title="@string/start_playback_here" />
 </menu>
