--- a/app/src/main/res/menu/track_item_menu.xml
+++ b/app/src/main/res/menu/track_item_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/play_track_item"
+        android:icon="@drawable/ic_playlist_add_foreground"
+        android:title="@string/play" />
+    <item
         android:id="@+id/add_track_to_playlist_item"
         android:icon="@drawable/ic_playlist_add_foreground"
         android:title="@string/add_to_playlist" />
